[package]
name = "ser_der"
description = "Newtypes for the der crate to allow for serde de-/serialization"
version = "0.0.0"
edition = "2021"
authors = ["bitfl0wer"]
license = "MPL-2.0"

[features]
default = []
alloc = ["der/alloc"]
std = ["alloc"]
arbitrary = ["der/arbitrary"]
bytes = ["der/bytes"]
oid = ["der/oid"]
pem = ["der/pem"]
real = ["der/real"]


[dependencies]
der = "0.7"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_test = "1.0"
